<resources>
    <string name="app_name">ClujBikeLite</string>
    <string name="tab_all">All</string>
    <string name="tab_favorites">Favorites</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="menu_colorInfo">Color Info</string>
    <string name="action_settings">Settings</string>
    <string name="action_info_settings">Info/Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_info__maps">Map</string>
    <string name="bikes">bikes</string>
    <string name="parking">parking</string>
    <string name="add">add</string>
    <string name="piata_detunata">Piata Detunata</string>
    <string name="all_tab">All Tab</string>
    <string name="favorites_tab">Favorites Tab</string>
    <string name="info">Info</string>
    <string name="todo">todo</string>
    <string name="active">Active</string>
    <string name="offline">Offline</string>
    <string name="not_working">Not Working</string>
    <string name="overpopulated">Overpopulated</string>
    <string name="underpopulated">Underpopulated</string>
    <string name="settings">Settings</string>
    <string name="startup_tab">Startup tab</string>
    <string name="clujbikelite">ClujBikeLite</string>
    <string name="bikes_UpperCase">Bikes</string>
    <string name="parking_Uppercase">Parking</string>
</resources>
