<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:text=""
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="16dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/active"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/active"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="TextViewEdits" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/offline"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/offline"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="TextViewEdits" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/in_active"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/not_working"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="TextViewEdits" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/overcrowded"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/overpopulated"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="TextViewEdits" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:src="@drawable/underpopulated"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/underpopulated"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

    <View android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorSecondaryText" />

    <TextView
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:gravity="left"
        android:text="@string/startup_tab"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryText"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android:id="@+id/radiogroupe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:divider="@color/colorPrimaryDark"
        android:gravity="left"
        tools:ignore="RtlHardcoded">

        <RadioButton
            android:id="@+id/radioButton_all"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tablayout_height"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:onClick="onRadioButtonClicked"
            android:text="@string/all_tab"
            android:textColorLink="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/radioButton_favorit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tablayout_height"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:onClick="onRadioButtonClicked"
            android:text="@string/favorites_tab"
            android:textColorLink="@color/colorPrimaryDark" />
    </RadioGroup>


</LinearLayout>