<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="220dp"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/imageviewActive"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:src="@drawable/active"
                android:contentDescription="@string/add" />

            <TextView
                android:id="@+id/tvStationName"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:scrollHorizontally="false"
                android:text="@string/piata_detunata"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryText" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvStationAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="22dp"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageviewAddToFavourites"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:src="@drawable/map_icon"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:contentDescription="@string/add" />

        <TextView
            android:id="@+id/tvOcuppiedSpotsNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:text="@string/bikes"
            android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/parking" />
    </LinearLayout>

</LinearLayout>